--- a/dev/index.html
+++ b/dev/index.html
@@ -28,9 +28,9 @@ Platform Info:
   LIBM: libopenlibm
   LLVM: libLLVM-15.0.7 (ORCJIT, znver3)
 Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Manifest.toml`
-  [47edcb42] ADTypes v1.5.3
+  [47edcb42] ADTypes v1.6.1
   [a4c015fc] ANSIColoredPrinters v0.0.1
-⌅ [c3fe647b] AbstractAlgebra v0.40.9
+⌅ [c3fe647b] AbstractAlgebra v0.41.10
   [1520ce14] AbstractTrees v0.4.5
   [7d9f7c33] Accessors v0.1.36
   [79e6a3ab] Adapt v4.0.4
@@ -67,7 +67,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [459566f4] DiffEqCallbacks v3.6.2
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
-  [a0c0ee7d] DifferentiationInterface v0.5.7
+  [a0c0ee7d] DifferentiationInterface v0.5.9
   [31c24e10] Distributions v0.25.109
   [ffbed154] DocStringExtensions v0.9.3
   [e30172f5] Documenter v1.5.0
@@ -76,7 +76,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
 ⌅ [7c1d4256] DynamicPolynomials v0.5.7
 ⌅ [06fc5a27] DynamicQuantities v0.13.2
   [4e289a0a] EnumX v1.0.4
-  [f151be2c] EnzymeCore v0.7.6
+  [f151be2c] EnzymeCore v0.7.7
   [e2ba6199] ExprTools v0.1.10
   [7034ab61] FastBroadcast v0.3.4
   [9aa1b823] FastClosures v0.3.2
@@ -93,7 +93,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d7ba0133] Git v1.3.1
   [c27321d9] Glob v1.3.1
   [86223c79] Graphs v1.11.2
-  [0b43b601] Groebner v0.7.4
+  [0b43b601] Groebner v0.7.5
   [3e5b6fbb] HostCPUFeatures v0.1.17
   [34004b35] HypergeometricFunctions v0.3.23
   [b5f81e59] IOCapture v0.2.5
@@ -101,13 +101,13 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d25df0c9] Inflate v0.1.5
   [18e54dd8] IntegerMathUtils v0.1.2
   [8197267c] IntervalSets v0.7.10
-  [3587e190] InverseFunctions v0.1.14
+  [3587e190] InverseFunctions v0.1.15
   [92d709cd] IrrationalConstants v0.2.2
   [c8e1da08] IterTools v1.10.0
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.5.0
   [682c06a0] JSON v0.21.4
-  [98e50ef6] JuliaFormatter v1.0.56
+  [98e50ef6] JuliaFormatter v1.0.58
   [ccbc3e58] JumpProcesses v9.11.1
   [ef3ab10e] KLU v0.6.0
   [ba0b0d4f] Krylov v0.9.6
@@ -117,7 +117,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [23fbe1c1] Latexify v0.16.4
   [10f19ff3] LayoutPointers v0.1.17
   [0e77f7df] LazilyInitializedFields v1.2.2
-  [5078a376] LazyArrays v2.1.5
+  [5078a376] LazyArrays v2.1.9
   [d3d80556] LineSearches v7.2.0
   [7ed4a6bd] LinearSolve v2.30.2
   [2ab3a3ac] LogExpFunctions v0.3.28
@@ -134,13 +134,13 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d8a4904e] MutableArithmetics v1.4.5
   [d41bc354] NLSolversBase v7.8.3
   [77ba4419] NaNMath v1.0.2
-⌅ [2edaba10] Nemo v0.43.3
+⌅ [2edaba10] Nemo v0.45.7
   [8913a72c] NonlinearSolve v3.13.1
   [6fe1bfb0] OffsetArrays v1.14.1
   [bac558e1] OrderedCollections v1.6.3
   [90014a1f] PDMats v0.11.31
   [65ce6f38] PackageExtensionCompat v1.0.2
-  [3e851597] ParamPunPam v0.4.0
+  [3e851597] ParamPunPam v0.4.1
   [d96e819e] Parameters v0.12.3
   [69de0a69] Parsers v2.8.1
   [e409e4f3] PoissonRandom v0.4.4
@@ -151,7 +151,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [21216c6a] Preferences v1.4.3
   [08abe8d2] PrettyTables v2.3.2
   [27ebfcd6] Primes v0.5.6
-  [92933f4c] ProgressMeter v1.10.0
+  [92933f4c] ProgressMeter v1.10.2
   [43287f4e] PtrArrays v1.2.0
   [1fd47b50] QuadGK v2.9.4
   [fb686558] RandomExtensions v0.4.4
@@ -166,7 +166,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7e49a35a] RuntimeGeneratedFunctions v0.5.13
   [94e857df] SIMDTypes v0.1.0
   [476501e8] SLEEFPirates v0.6.43
-  [0bca4576] SciMLBase v2.42.0
+  [0bca4576] SciMLBase v2.43.0
   [c0aeaf25] SciMLOperators v0.3.8
   [53ae85a6] SciMLStructures v1.4.1
   [efcf1570] Setfield v1.1.1
@@ -174,10 +174,10 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [699a6c99] SimpleTraits v0.9.4
   [a2af1166] SortingAlgorithms v1.2.1
   [47a9eef4] SparseDiffTools v2.19.0
-  [0a514795] SparseMatrixColorings v0.3.3
+  [0a514795] SparseMatrixColorings v0.3.5
   [e56a9233] Sparspak v0.3.9
   [276daf66] SpecialFunctions v2.4.0
-  [aedffcd0] Static v1.1.0
+  [aedffcd0] Static v1.1.1
   [0d7ed370] StaticArrayInterface v1.5.1
   [90137ffa] StaticArrays v1.9.7
   [1e83bf80] StaticArraysCore v1.4.3
@@ -189,10 +189,10 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [220ca800] StructuralIdentifiability v0.5.8 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [2efcf032] SymbolicIndexingInterface v0.3.26
   [19f23fe9] SymbolicLimits v0.2.1
-  [d1185830] SymbolicUtils v2.1.0
-  [0c5d862f] Symbolics v5.33.0
+  [d1185830] SymbolicUtils v2.1.2
+  [0c5d862f] Symbolics v5.34.0
   [3783bdb8] TableTraits v1.0.1
-  [bd369af6] Tables v1.11.1
+  [bd369af6] Tables v1.12.0
 ⌅ [8ea1fca8] TermInterface v0.4.1
   [8290d209] ThreadingUtilities v0.5.2
   [a759f4b9] TimerOutputs v0.5.24
@@ -203,16 +203,13 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [781d530d] TruncatedStacktraces v1.4.0
   [5c2747f8] URIs v1.5.1
   [3a884ed6] UnPack v1.0.2
-  [1986cc42] Unitful v1.20.0
+  [1986cc42] Unitful v1.21.0
   [a7c27f48] Unityper v0.1.6
   [013be700] UnsafeAtomics v0.2.1
   [3d5dd08c] VectorizationBase v0.21.70
   [19fa3120] VertexSafeGraphs v0.2.0
-  [e21ec000] Antic_jll v0.201.500+0
-  [d9960996] Arb_jll v200.2300.0+0
-  [fcfa6d1b] Calcium_jll v0.401.100+0
   [2e619515] Expat_jll v2.6.2+0
-⌅ [e134572f] FLINT_jll v200.900.9+0
+  [e134572f] FLINT_jll v300.100.300+0
   [f8c6e375] Git_jll v2.44.0+2
   [1d5cc7b8] IntelOpenMP_jll v2024.2.0+0
   [94ce4f54] Libiconv_jll v1.17.0+0
@@ -275,4 +272,4 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [3f19e933] p7zip_jll v17.4.0+2
 Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.5.0 on <span class="colophon-date" title="Monday 8 July 2024 22:47">Monday 8 July 2024</span>. Using Julia version 1.10.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.5.0 on <span class="colophon-date" title="Saturday 20 July 2024 08:49">Saturday 20 July 2024</span>. Using Julia version 1.10.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
